@@ -1,3 +1,7 @@
+CR-2002-09-10-1  Bugfix:    L10N - (setlocale() returns e.g. fr_FR on LINUX)
+                            cutting of characters after "_" for building message
+                            file directory path.
+
 CR-2002-09-09-2  I18N:      invalid escape sequence in one of msgid
                  Bugtraq:   #4743505
                  Changed:   inst_sgeee usage output
